force-app/main/default/objects/Performance_Snapshot__c/Performance_Snapshot__c.object-meta.xml
<CustomObject>
    <description>Daily snapshots of Performance Target actuals for trend analytics and historical tracking.</description>
    <label>Performance Snapshot</label>
    <nameField>
        <displayFormat>SNAP-{00000}</displayFormat>
        <label>Snapshot ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Performance Snapshots</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>