force-app/main/default/objects/Performance_Snapshot__c/fields/Achievement_Pct__c.field-meta.xml
<CustomField>
    <fullName>Achievement_Pct__c</fullName>
    <label>Achievement %</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>