force-app/main/default/objects/Performance_Snapshot__c/fields/Performance_Target__c.field-meta.xml
<CustomField>
    <fullName>Performance_Target__c</fullName>
    <label>Performance Target</label>
    <referenceTo>Performance_Target__c</referenceTo>
    <relationshipLabel>Snapshots</relationshipLabel>
    <relationshipName>Snapshots</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>