force-app/main/default/objects/Performance_Snapshot__c/fields/Period_Day_Number__c.field-meta.xml
<CustomField>
    <fullName>Period_Day_Number__c</fullName>
    <label>Period Day Number</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>